--- a/web.3.4.config
+++ b/web.3.4.config
@@ -8,13 +8,13 @@
 
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS"
 
-         value="D:\home\site\wwwroot\env\Scripts\python.exe" />
+         value="D:\home\python364x64\Python.exe" />
 
     <add key="WSGI_HANDLER"
 
          value="ptvs_virtualenv_proxy.get_venv_handler()" />
 
-    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
+    <add key="PYTHONPATH" value="D:\Home\python364x64\" />
 
   </appSettings>
 
